--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -59,37 +59,6 @@ jobs:
         id: repoowner
         run: echo "lowercase=$(echo ${{ github.repository_owner }} | awk '{print tolower($0)}')" >> $GITHUB_OUTPUT
 
-      - name: Set version pyMuPDF
-        id: pymupdf_version
-        run: echo "version=1.24.9" >> $GITHUB_OUTPUT
-
-      - name: Generate tags PyMuPDF
-        id: metamu
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/pymupdf
-            ghcr.io/${{ steps.repoowner.outputs.lowercase }}/pymupdf
-          tags: |
-            type=raw,value=${{ steps.pymupdf_version.outputs.version }},enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-
-      - name: Build PyMuPDF and push main Dockerfile
-        uses: docker/build-push-action@v5
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          context: .
-          file: ./Dockerfile-PyMuPDF
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: ${{ steps.metamu.outputs.tags }}
-          labels: ${{ steps.metamu.outputs.labels }}
-          build-args: |
-            VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
-            PYMUPDF_VERSION=${{ steps.pymupdf_version.outputs.version }}
-          platforms: linux/amd64,linux/arm64/v8
-
       - name: Generate tags
         id: meta
         uses: docker/metadata-action@v5
@@ -103,8 +72,7 @@ jobs:
             type=raw,value=alpha,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Build and push main Dockerfile
-        id: maindockerfile
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
@@ -114,8 +82,7 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
+          build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
           platforms: linux/amd64,linux/arm64/v8
 
       - name: Generate tags ultra-lite
@@ -131,7 +98,7 @@ jobs:
             type=raw,value=latest-ultra-lite,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Build and push Dockerfile-ultra-lite
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         # if: github.ref != 'refs/heads/main'
         with:
           context: .
