--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,22 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install -y xorg-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
+        libxcursor-dev libxrandr-dev libxinerama-dev build-essential
+
+    - name: Build MuPDF
+      run: |
+        make prefix=/usr/local install
+
+    - name: Validate installation
+      run: |
+        mupdf-gl --version
+        muraster --version
+        mutool --version
+
+    - name: Install dependencies
+      run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel  # Install necessary build tools
 
