--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y xorg-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
-        libxcursor-dev libxrandr-dev libxinerama-dev build-essential
+        libxcursor-dev libxrandr-dev libxinerama-dev build-essential liblcms2-dev
 
     - name: Install dependencies
       run: |
