--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xorg-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
         libxcursor-dev libxrandr-dev libxinerama-dev build-essential liblcms2-dev
+        sudo apt-get -b source mupdf
 
     - name: Install dependencies
       run: |
