--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Clone MuPDF repository
       run: |
         git clone https://github.com/ArtifexSoftware/mupdf.git
+        cd mupdf
         git submodule update --init --recursive
 
     - name: Build MuPDF
