--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -8,8 +8,9 @@ on:
     paths: Dockerfile*
 
 permissions:
-  contents: read
   packages: write
+  contents: write
+  pull-requests: write
 jobs:
   push:
     runs-on: ubuntu-latest
