--- a/.github/scripts/docker/Dockerfile-PyMuPDF
+++ b/.github/scripts/docker/Dockerfile-PyMuPDF
@@ -17,7 +17,8 @@ RUN apk upgrade --no-cache -a && \
     python3-dev \
     build-base \
     swig \
-    git
+    git \
+    mupdf-dev
 
 WORKDIR /tmp
 
@@ -27,7 +28,7 @@ RUN <<EOF
     wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/$PYMUPDF_VERSION.tar.gz
     tar -xvf $PYMUPDF_VERSION.tar.gz
     cd PyMuPDF-$PYMUPDF_VERSION
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_THIRD=0 python3 setup.py install
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_THIRD=0 PYMUPDF_MUPDF_LIB=/usr/lib/ python3 setup.py install
     cd ..
     rm -rf PyMuPDF-$PYMUPDF_VERSION $PYMUPDF_VERSION.tar.gz  # Clean up
 EOF
