--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -27,7 +27,7 @@ jobs:
           gradle-version: 8.7
 
       - name: Run Gradle Command
-        run: ./gradlew clean build --scan
+        run: ./gradlew clean build
         env:
           DOCKER_ENABLE_SECURITY: false
 
