--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           gradle-version: 8.7
 
       - name: Build with Gradle
-        run: ./gradlew build --no-build-cache --scan
+        run: ./gradlew build --no-build-cache
 
   docker-compose-tests:
     # if: github.event_name == 'push' && github.ref == 'refs/heads/main' ||
