--- a/Dockerfile-fat
+++ b/Dockerfile-fat
@@ -12,8 +12,8 @@ RUN DOCKER_ENABLE_SECURITY=true \
 ./gradlew clean build
 
 # Main stage
-FROM ludy87/pymupdf:latest
-# FROM alpine:3.20.2
+# FROM ludy87/pymupdf:latest
+FROM alpine:3.20.2
 
 # Copy necessary files
 COPY scripts /scripts
@@ -65,7 +65,7 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
         python3 \
     py3-pip && \
 # uno unoconv and HTML
-    pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint && \
+    pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint pdf2image pillow && \
     mv /usr/share/tessdata /usr/share/tessdata-original && \
     mkdir -p $HOME /configs /logs /customFiles /pipeline/watchedFolders /pipeline/finishedFolders && \
     fc-cache -f -v && \
