--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: 💬 Discord Server
     url: https://discord.gg/Cn8pWhQRxZ
     about: You can join our Discord server for real time discussion and support
+  - name: 💡 Discussions
+    url: https://github.com/Stirling-Tools/Stirling-PDF/discussions
+    about: If you have general questions go to Discussions
