--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,29 +1,144 @@
-site_name: Documentations
-site_description: 'Just another boring documentation site'
-
-site_dir: docs-build
+site_name: Striling-PDF Docs
+site_description: "Automatic documentation from sources, for MkDocs."
+repo_url: https://github.com/Stirling-Tools/Stirling-PDF
+site_url: https://stirlingpdf.io/
+repo_name: Stirling-Tools/Stirling-PDF
+site_author: Frooodle
+docs_dir: docs
+copyright: Copyright © 2024 Stirling-PDF
+strict: true
 
 theme:
-  name: 'material'
+  name: material
+  logo: stirling.png
+  favicon: stirling.png
+  font:
+    code: "Consolas"
+    text: "Instrument Sans"
+  language: en
+  icon:
+    repo: fontawesome/brands/github
+  custom_dir: docs/.overrides
+  features:
+    - announce.dismiss
+    - content.code.copy
+    - content.footnote.tooltips
+    - content.tooltips
+    - navigation.indexes
+    - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - navigation.path
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    - toc.integrate
   palette:
-    primary: 'blue'
-    accent: 'lightblue'
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: custom
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to system preference
 
-extra_css:
-  - 'css/extra.css'
-extra_javascript:
-  - js/extra.js
+plugins:
+  - info
+  - search:
+      lang: en
+  - tags
+  - minify:
+      minify_html: true
+      minify_js: true
+      minify_css: true
+      htmlmin_opts:
+        remove_comments: true
+      cache_safe: true
+  - autorefs
+  - literate-nav:
+      nav_file: README.md
+      implicit_index: true
+  # - git-revision-date-localized:
+  #     enable_creation_date: true
+  # - git-committers:
+  #     repository: Stirling-Tools/Stirling-PDF
+  #     branch: main
+  # - git-authors
+
+markdown_extensions:
+  - abbr
+  - md_in_html
+  - admonition
+  - codehilite
+  - attr_list
+  # - github-callouts
+  - footnotes
+  - pymdownx.details
+  - pymdownx.highlight:
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+  - toc:
+      permalink: true
+  - def_list
+  - tables
+  - pymdownx.highlight:
+      use_pygments: false
+      anchor_linenums: true
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - mkdocs-click
 
 extra:
   social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/giansalex
+  - icon: fontawesome/brands/github
+    link: https://github.com/Stirling-Tools/Stirling-PDF
+  - icon: fontawesome/brands/discord
+    link: https://discord.gg/Cn8pWhQRxZ
+  - icon: fontawesome/brands/docker
+    link: https://hub.docker.com/r/frooodle/s-pdf
 
-markdown_extensions:
-  - admonition
-  - codehilite:
-      css_class: code
-      use_pygments: false
-      guess_lang: false
-  - toc:
-      permalink: true
+extra_css:
+  - stylesheets/extra.css
+
+nav:
+  - Home:
+    - Overview: index.md
+  - User documentation:
+    - use/index.md
+    - Installation Guide for local:
+      - use/installation/index.md
+      - use/installation/unix_installation.md
+      - use/installation/windows_installation.md
+    - Start with Docker:
+      - use/docker-ultra-lite.md
+      - use/docker.md
+      - use/docker-fat.md
+    - Advanced Configuration:
+      - use/advanced/add_configurations.md
+  - Contribute:
+    - contribute/index.md
+    - Add new languages: contribute/translation.md
+  - FAQ:
+    - faq/highlights.md
+  - About: about/index.md
+  - Demo: https://stirlingpdf.io/
