--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
@@ -32,12 +32,9 @@ jobs:
       - name: Installing pip packages
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material[imaging]==9.5.32
-          pip install mkdocs-macros-plugin==1.0.5
+          python3 -m pip install -r requirements.txt
       - name: Build & Publish documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pip install mkdocs-material[imaging]==9.5.32
-          pip install mkdocs-macros-plugin==1.0.5
           mkdocs gh-deploy --force
