--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ mkdocs-macros-plugin==1.0.5
 mkdocs-click
 mkdocs-minify-plugin
 mkdocs-autorefs
+mkdocs-git-authors-plugin
+mkdocs-git-revision-date-localized-plugin
+mkdocs-git-committers-plugin-2
