--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ mkdocs-autorefs
 mkdocs-git-authors-plugin
 mkdocs-git-revision-date-localized-plugin
 mkdocs-git-committers-plugin-2
+mkdocs-literate-nav
