--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,5 +36,6 @@ jobs:
       - name: Build & Publish documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdocs gh-deploy --force
