--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -37,4 +37,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          mkdocs build
           mkdocs gh-deploy --force
