--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,6 +33,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
+      - name: mkdocs --version
+        run: |
+          mkdocs --version
       - name: Build & Publish documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
