--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ theme:
   language: en
   icon:
     repo: fontawesome/brands/github
-  custom_dir: docs/overrides
+  custom_dir: custom_theme
   features:
     - announce.dismiss
     - content.code.copy
