--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Installing pip packages
         run: |
-          python -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
+          # python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: mkdocs --version
         run: |
           mkdocs --version
