--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           python-version: "3.x" # Die Python-Version, die du benötigst
 
-      - run: git diff --name-only ${{ github.event.before }} ${{ github.sha }}
+      - run: git diff --name-only origin/main...HEAD
 
       - name: Determine if reference file is from PR branch
         id: determine-file
         run: |
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^src/main/resources/messages_en_GB.properties$'; then
+          if git diff --name-only origin/main...HEAD | grep '^src/main/resources/messages_en_GB.properties$'; then
               echo "REFERENCE_FILE=src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           else
               echo "REFERENCE_FILE=main-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
