--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,7 +30,12 @@ jobs:
       - name: Determine if reference file is from PR branch
         id: determine-file
         run: |
-          if git diff --name-only origin/main...HEAD | grep '^src/main/resources/messages_en_GB.properties$'; then
+          echo "Checking for file changes..."
+          CHANGED_FILES=$(git diff --name-only origin/main...HEAD)
+          echo "Changed files:"
+          echo "$CHANGED_FILES"
+
+          if echo "$CHANGED_FILES" | grep -q '^src/main/resources/messages_en_GB.properties$'; then
               echo "REFERENCE_FILE=src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           else
               echo "REFERENCE_FILE=main-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
