--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,9 +30,10 @@ jobs:
       - name: Determine if reference file is from PR branch
         id: determine-file
         run: |
-          echo "Checking for file changes..."
-          CHANGED_FILES=$(git diff --name-only origin/main...HEAD)
+          git fetch origin
+          echo "Fetching changes..."
           echo "Changed files:"
+          CHANGED_FILES=$(git diff --name-only origin/main...HEAD)
           echo "$CHANGED_FILES"
 
           if echo "$CHANGED_FILES" | grep -q '^src/main/resources/messages_en_GB.properties$'; then
