--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,11 @@ jobs:
         with:
           python-version: "3.x" # Die Python-Version, die du benötigst
 
-      - run: echo "CHANGED_FILES=$(git diff --name-only origin/main...HEAD)" >> $GITHUB_ENV
+      - run: |
+          CHANGED_FILES=$(git diff --name-only origin/main...HEAD)
+          echo "$CHANGED_FILES"
+          echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
+          echo  ${{ env.CHANGED_FILES }}
 
       - name: Determine if reference file is from PR branch
         id: determine-file
