--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Fetch PR changed files
         id: fetch-pr-changes
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           echo "Fetching PR changed files..."
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" > changed_files.txt
