--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,24 +27,24 @@ jobs:
           python-version: "3.x"
 
       - name: Install GitHub CLI
-        run: sudo apt-get install gh
+        run: sudo apt-get install -y gh
 
       - name: Fetch PR changed files
         id: fetch-pr-changes
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Fetching PR changed files..."
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" > changed_files.txt
-          CHANGED_FILES=$(cat changed_files.txt)
+          CHANGED_FILES=$(cat changed_files.txt | tr '\n' ' ')
           echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
-          echo "$CHANGED_FILES"
+          echo "Changed files: ${CHANGED_FILES}"
 
       - name: Determine if reference file is from PR branch
         id: determine-file
         run: |
           echo "Checking for reference file..."
-          if echo "${{ env.CHANGED_FILES }}" | grep -q '^src/main/resources/messages_en_GB.properties$'; then
+          if echo "${{ env.CHANGED_FILES }}" | grep -q 'src/main/resources/messages_en_GB.properties'; then
               echo "REFERENCE_FILE=src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           else
               echo "REFERENCE_FILE=main-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
