--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -60,4 +60,4 @@ jobs:
 
       - name: Run Python script to check file
         run: |
-          python .github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }}
+          python .github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{env.CHANGED_FILES}}
