--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,6 +12,8 @@ jobs:
       - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.head_ref }}
+          path: ca-${{ github.head_ref }}
           fetch-depth: 0
 
       - name: Checkout main branch
@@ -27,7 +29,7 @@ jobs:
           python-version: "3.x"
 
       - name: Install GitHub CLI
-        run: sudo apt-get install -y gh
+        run: sudo apt-get update && sudo apt-get install -y gh
 
       - name: Fetch PR changed files
         id: fetch-pr-changes
@@ -36,16 +38,17 @@ jobs:
         run: |
           echo "Fetching PR changed files..."
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" > changed_files.txt
-          CHANGED_FILES=$(cat changed_files.txt | tr '\n' ' ')
+          BRANCH_PATH="ca-${{ github.head_ref }}"
+          CHANGED_FILES=$(cat changed_files.txt | sed "s|^|$BRANCH_PATH/|")
           echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
-          echo "Changed files: ${CHANGED_FILES}"
+          echo "Changed files with branch path: ${CHANGED_FILES}"
 
       - name: Determine if reference file is from PR branch
         id: determine-file
         run: |
           echo "Checking for reference file..."
           if echo "${{ env.CHANGED_FILES }}" | grep -q 'src/main/resources/messages_en_GB.properties'; then
-              echo "REFERENCE_FILE=src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
+              echo "REFERENCE_FILE=ca-${{ github.head_ref }}/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           else
               echo "REFERENCE_FILE=main-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           fi
@@ -55,4 +58,4 @@ jobs:
 
       - name: Run Python script to check file
         run: |
-          python .github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{env.CHANGED_FILES}}
+          python .github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{ env.CHANGED_FILES }}
