--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,7 +41,7 @@ jobs:
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" > ../changed_files.txt
           cd ..
           BRANCH_PATH="pr-branch"
-          CHANGED_FILES=$(cat changed_files.txt | sed "s|^|$BRANCH_PATH/|")
+          CHANGED_FILES=$(cat changed_files.txt | sed "s|^|$BRANCH_PATH/|" | tr '\n' '\x1e') # Use a non-printable character as delimiter
           echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
           echo "Changed files: ${CHANGED_FILES}"
 
@@ -49,7 +49,7 @@ jobs:
         id: determine-file
         run: |
           echo "Determining reference file..."
-          if echo "${{ env.CHANGED_FILES }}" | grep -q 'src/main/resources/messages_en_GB.properties'; then
+          if echo "${{ env.CHANGED_FILES }}" | tr '\x1e' '\n' | grep -q 'src/main/resources/messages_en_GB.properties'; then
               echo "REFERENCE_FILE=pr-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
           else
               echo "REFERENCE_FILE=main-branch/src/main/resources/messages_en_GB.properties" >> $GITHUB_ENV
