--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -61,4 +61,4 @@ jobs:
 
       - name: Run Python script to check files
         run: |
-          python .github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{ env.CHANGED_FILES }}
+          python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{ env.CHANGED_FILES }}
