--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,7 +42,7 @@ jobs:
           cd ..
           echo $(cat changed_files.txt)
           BRANCH_PATH="pr-branch"
-          CHANGED_FILES=$(cat changed_files.txt | sed "s|^|$BRANCH_PATH/|" | tr '\n' '\x1e') # Use a non-printable character as delimiter
+          CHANGED_FILES=$(cat changed_files.txt | tr '\n' ' ')
           echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
           echo "Changed files: ${CHANGED_FILES}"
 
@@ -62,4 +62,4 @@ jobs:
 
       - name: Run Python script to check files
         run: |
-          python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{ env.CHANGED_FILES }}
+          python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --files ${{ env.CHANGED_FILES }} --branch ${{ env.CHANGED_FILES }}
