--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,7 @@
 name: Check Properties Files in PR
 
 on:
+  workflow_dispatch:
   pull_request_target:
     types: [opened, synchronize, reopened]
 
