--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,8 +30,7 @@ jobs:
           python-version: "3.x"
 
       - name: Install GitHub CLI
-        run: |
-          pip install gh
+        run: sudo apt-get update && sudo apt-get install -y gh
 
       - name: Fetch PR changed files
         id: fetch-pr-changes
