--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -69,25 +69,30 @@ jobs:
           python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --branch ${{ env.BRANCH_PATH }} --files ${{ env.CHANGED_FILES }}
         continue-on-error: true
 
+        - name: Capture output
+        id: capture-output
+        run: |
+          if [ -f main-branch/.github/scripts/check_language_files.py ]; then
+            python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --branch ${{ env.BRANCH_PATH }} --files ${{ env.CHANGED_FILES }} || echo "Test failed" > failure.txt
+          fi
+          if [ -f failure.txt ]; then
+            echo "Test failed, capturing output..."
+            # Extract error output and store it in an environment variable
+            ERROR_OUTPUT=$(tail -n 50 failure.txt)
+            echo "ERROR_OUTPUT=${ERROR_OUTPUT}" >> $GITHUB_ENV
+          fi
+
       - name: Post comment on PR
-        if: failure()
+        if: ${{ failure() }}
         uses: actions/github-script@v7
         with:
           script: |
-            const { exec } = require('@actions/exec');
-            let output = '';
-            await exec('python', ['.github/scripts/check_language_files.py', '--reference-file', 'pr-branch/src/main/resources/messages_en_GB.properties', '--branch', 'pr-branch', '--files', ...process.env.CHANGED_FILES.split(' ')], {
-              listeners: {
-                stdout: (data) => {
-                  output += data.toString();
-                }
-              }
-            });
             const [repoOwner, repoName] = process.env.GITHUB_REPOSITORY.split('/');
             const prNumber = process.env.GITHUB_REF.split('/').pop();
+            const errorOutput = process.env.ERROR_OUTPUT || 'No error output captured';
             await github.rest.issues.createComment({
               owner: repoOwner,
               repo: repoName,
               issue_number: prNumber,
-              body: `### Test Report\n\n\`\`\`\n${output}\n\`\`\``
+              body: `### Test Report\n\n\`\`\`\n${errorOutput}\n\`\`\``
             });
